View Issue Details

IDProjectCategoryView StatusLast Update
0030900Open CASCADEOCCT:Configurationpublic2019-08-17 12:24
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Product Version7.4.0 
Target Version7.4.0Fixed in Version7.4.0 
Summary0030900: Configuration - fix compilation using macOS SDK before 10.12
DescriptionBuilding OCCT using pre-macOS 10.12 SDK leads to compilation errors due to usage of new enumerations.
TagsNo tags attached.
Test case numberNot required

Relationships

child of 0030507 closedbugmaster Visualization - introduce AIS_ViewController 

Activities

git

2019-08-15 01:07

administrator   ~0086250

Branch CR30900 has been created by kgv.

SHA-1: 7e8629324046d920e1309d3aed1b474d13681038


Detailed log of new commits:

Author: kgv
Date: Thu Aug 15 01:04:45 2019 +0300

    0030900: Configuration - fix compilation using macOS SDK before 10.12
    
    ViewerTest - added compatibility defines.

kgv

2019-08-15 09:37

developer   ~0086255

Please raise the patch.

git

2019-08-17 12:24

administrator   ~0086298

Branch CR30900 has been deleted by inv.

SHA-1: 7e8629324046d920e1309d3aed1b474d13681038

Related Changesets

occt: master c64135f7

2019-08-14 22:04:45

kgv


Committer: bugmaster Details Diff
0030900: Configuration - fix compilation using macOS SDK before 10.12

ViewerTest - added compatibility defines.
Affected Issues
0030900
mod - src/ViewerTest/ViewerTest_ViewerCommands_1.mm Diff File

Issue History

Date Modified Username Field Change
2019-08-15 01:05 kgv New Issue
2019-08-15 01:05 kgv Assigned To => bugmaster
2019-08-15 01:07 git Note Added: 0086250
2019-08-15 09:37 kgv Note Added: 0086255
2019-08-15 09:37 kgv Severity minor => trivial
2019-08-15 09:37 kgv Status new => resolved
2019-08-15 09:37 kgv Status resolved => reviewed
2019-08-15 09:37 kgv Relationship added child of 0030507
2019-08-15 17:44 bugmaster Status reviewed => tested
2019-08-15 17:46 bugmaster Test case number => Not required
2019-08-17 12:07 bugmaster Changeset attached => occt master c64135f7
2019-08-17 12:07 bugmaster Status tested => verified
2019-08-17 12:07 bugmaster Resolution open => fixed
2019-08-17 12:24 git Note Added: 0086298