0030900: Configuration - fix compilation using macOS SDK before 10.12

ViewerTest - added compatibility defines.